--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shouldve-been-js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "./dist/entry.js",
   "module": "./dist/entry.mjs",
   "types": "./dist/entry.d.ts",
@@ -11,21 +11,20 @@
   "license": "ISC",
   "homepage": "https://github.com/eivindborstad/shouldve-been-js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.68",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.2",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "craco start",
@@ -55,9 +54,13 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
-    "eslint": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.33.2",
-    "generate-license-file": "^2.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "generate-license-file": "^3.0.1",
     "tsup": "^8.0.1"
   }
 }
